# my-uv-tool

./: README.md  pyproject.toml
src/my_uv_tool/: __init__.py  cli.py  utils.py
