[project]
name = "my-uv-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "nkmk", email = "nkmk.on@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.2.6",
]

[project.scripts]
my-uv-tool = "my_uv_tool.cli:main"
my-np-version = "my_uv_tool.utils:numpy_version"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
